--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: github
-  repo: COABI/COABI
+  repo: https://coabi.github.io/COABI/ 
   branch: master
-  site_domain: cms.netlify.com
+  site_domain: https://my-oauth.netlify.com/
 
 media_folder: "images/uploads"
 
