--- a/admin1/config.yml
+++ b/admin1/config.yml
@@ -4,13 +4,30 @@ backend:
 media_folder: "images/uploads"
 
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "_posts/" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Tags", name: "tags", widget: "list"}
-      - {label: "Body", name: "body", widget: "markdown"}
+ - label: "Pages"
+    label_singular: "Page"
+    name: pages
+    folder: "_pages"
+    create: true
+    slug: "{{slug}}"
+    preview_path: "{{permalink}}"
+    editor:
+      preview: false
+    fields:
+      - {label: "Title", name: title, widget: string}
+      - {label: "Permalink", name: permalink, widget: string}
+      - label: "Layout Template"
+        name: "layout"
+        widget: "select"
+        default: "blocks"
+        options:
+          - { label: "Default", value: "blocks" }
+          - { label: "Home Page", value: "home" }
+      - {label: "Meta Description", name: metaDescription, widget: text, required: false}
+      - label: "Social Sharing"
+        name: social
+        widget: object
+        required: false
+        fields:
+          - {label: "OpenGraph Image", name: ogImage, widget: image, required: false}
+          - {label: "Twitter Image", name: twitterImage, widget: image, required: false}
