--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: https://github.com/COABI
 
-
+publish_mode: editorial_workflow
 media_folder: "images/uploads"
 
 collections:
