--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: https://github.com/COABI
+  repo: https://github.com/COABI/COABI
 
 publish_mode: editorial_workflow
 media_folder: "images/uploads"
