--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,9 +1,15 @@
 backend:
   name: github
   repo: https://github.com/COABI/COABI
+  branch: master
 
 publish_mode: editorial_workflow
-media_folder: "images/uploads"
+media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
+public_folder: "/images/uploads" 
+
+
+ 
+
 
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
