--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   repo: https://github.com/COABI/COABI
   branch: master
 
+site_url: https://velotis.net
 publish_mode: editorial_workflow
 media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/images/uploads" 
