--- a/admin/config.yml
+++ b/admin/config.yml
@@ -25,3 +25,13 @@ collections:
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Body", name: "body", widget: "markdown"}
+      
+    - name: "settings"
+    label: "Settings"
+      files:
+      - name: "general"
+        label: "Site Settings"
+        file: "_data/settings.yml"
+        description: "General Site Settings"
+        fields:
+          - {label: "Global title", name: "site_title", widget: "string"}
